--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.3",
     "yup": "^1.3.3"
   },
